		* Added an sv_debug_heartbeat cvar that sends the heartbeat every two seconds instead of five minutes. It is only present on debug builds, to remove any outside possibility of spamming the server.
	* Added the ability for the engine to detect when it is in graphics mode (i.e. if the renderer lib has been initalised yet)
	* Got rid of viddef and used gl_width/gl_height cvars everywhere
	
BUG FIXES:
	* Limited relative velocity gain to the object's velocity so you can't gain velocity forever.
		* However this does not apply to the tangfuslicator ammo or rockets, so you can boost off of those.
	* Fixed crash when alt+tabbing out
	* Fixed textures still being internally interpreted with a maximum length of 32 characters instead of the intended 80, leading to phantom downloads of textures that really existed, but with longer names
REMOVALS:

OTHER CHANGES:
	* Gave the tangfuslicator particles a bit of colour
	* Renamed some cvars:
		* zombietime -> sv_zombietime
		* showclamp -> sv_showclamp

Version 0.0.10 (Build 558)
June 8, 2024
* Fixed numerous horrific crimes against C programming that caused crash bugs

Version 0.0.10 (Build 553)
June 8, 2024

NEW FEATURES:
* Added the Tangfuslicator!
	* A director team gun that can zombify Players. However, the range is short (currently 1,536 units) and you can't directly see where it's going (it spews particles).
* Major particle system improvements:
	* Added velocity to generic particle effect
	* Added the func_particle_effect entity
		* You can use this to send any tempent over the network.
		* The main keys to use with this entity are velocity (speed of the particles), particle_effect (type of the particle effect), rate (particles per tick) and for some of them color.
		* There are two ways to control lifetime: alphavel (will fade by this much) and lifetime (will disappear after this many milliseconds)
		* Most of the others are intended for specific particle effects and haven't really been tested! 